<resources>

    <!-- Extra Keys -->


    <!-- Titles -->
    <string name="app_name">PlantTracker</string>
    <string name="subtitle_MyAreas">My Areas</string>
    <string name="subtitle_MyPlants">My Plants</string>

    <!-- EditText hints -->
    <string name="hint_EnterAreaName">Enter area name</string>
    <string name="hint_EnterPlantName">Enter plant name</string>
    <string name="hint_EnterPlantType">Enter plant type</string>
    <string name="hint_SelectArea">Select area</string>
    <string name="hint_EnterUsername">Enter username</string>
    <string name="hint_EnterPassword">Enter password</string>
    <string name="hint_ConfirmPassword">Confirm password</string>

    <!-- Labels -->
    <string name="label_Name">Name:</string>
    <string name="label_LightLevel">Light Level:</string>
    <string name="label_LightLevelNeeded">Light Level Needed:</string>
    <string name="label_Area">Area:</string>
    <string name="label_NumberOfPlants">Number of Plants:</string>
    <string name="label_WateringFrequency">Watering Frequency:</string>
    <string name="label_LastWatered">Last Watered:</string>
    <string name="label_PlantType">Plant Type:</string>

    <!-- Button Titles -->
    <string name="buttonTitle_Home">Home</string>
    <string name="buttonTitle_AddNewArea">Add New Area</string>
    <string name="buttonTitle_Save">Save</string>
    <string name="buttonTitle_Cancel">Cancel</string>
    <string name="buttonTitle_Delete">Delete</string>
    <string name="buttonTitle_Login">Login</string>
    <string name="buttonTitle_CreateAccount">Create Account</string>
    <string name="buttonTitle_MyPlants">My Plants</string>
    <string name="buttonTitle_MyAreas">My Areas</string>
    <string name="buttonTitle_AdminOptions">Admin Options</string>
    <string name="buttonTitle_AddNewPlant">Add New Plant</string>
    <string name="buttonTitle_SignUp">Sign Up</string>
    <string name="buttonTitle_Edit">Edit</string>
    <string name="buttonTitle_Back">Back</string>
    <string name="buttonTitle_WaterPlant">Water Plant</string>

    <!-- Other -->
    <string name="no_data">No data</string>
    <string name="menu_Username">Username</string>
    <string name="menu_Home">Home</string>
    <string name="menu_LogOut">Log Out</string>
    <string name="sharedPreferencesFileName">plantTrackerSharedPreferences</string>
    <string name="sharedPreferencesUserIDKey">plantTrackerSharedPreferenceUserID</string>
    <string name="no_area_selected">"No area selected. "</string>
    <string name="label_Type">Type:</string>
    <string name="hint_EnterWateringFrequency">Enter watering frequency (in days)</string>

</resources>