<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUpActivityTitleTextView"
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpActivityUsernameEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:hint="@string/hint_EnterUsername"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityTitleTextView" />

    <EditText
        android:id="@+id/signUpActivityPasswordEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:hint="@string/hint_EnterPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityUsernameEditText" />

    <EditText
        android:id="@+id/signUpActivityConfirmEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:hint="@string/hint_ConfirmPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityPasswordEditText" />

    <Button
        android:id="@+id/signUpActivitySignUpButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/buttonTitle_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityConfirmEditText" />

    <Button
        android:id="@+id/signUpActivityCancelButton"
        style="@style/danger_button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpActivitySignUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>