<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPlantActivity">

    <TextView
        android:id="@+id/viewPlantActivityNameLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/label_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewPlantActivityNameTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityNameLabel" />

    <TextView
        android:id="@+id/viewPlantActivityTypeLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_Type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityNameTextView" />

    <TextView
        android:id="@+id/viewPlantActivityTypeTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityTypeLabel" />

    <TextView
        android:id="@+id/viewPlantActivityAreaLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_Area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityTypeTextView" />

    <TextView
        android:id="@+id/viewPlantActivityAreaTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityAreaLabel" />

    <TextView
        android:id="@+id/viewPlantActivityLightLevelNeededLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_LightLevelNeeded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityAreaTextView" />

    <TextView
        android:id="@+id/viewPlantActivityLightLevelNeededTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityLightLevelNeededLabel" />

    <TextView
        android:id="@+id/viewPlantActivityWateringFrequencyLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_WateringFrequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityLightLevelNeededTextView" />

    <TextView
        android:id="@+id/viewPlantActivityWateringFrequencyTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityWateringFrequencyLabel" />

    <TextView
        android:id="@+id/viewPlantActivityLastWateredLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_LastWatered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityWateringFrequencyTextView" />

    <TextView
        android:id="@+id/viewPlantActivityLastWateredTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityLastWateredLabel" />

    <Button
        android:id="@+id/viewPlantActivityWaterPlantButton"
        style="@style/water_button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/buttonTitle_WaterPlant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityLastWateredTextView" />

    <Button
        android:id="@+id/viewPlantActivityEditButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityWaterPlantButton" />

    <Button
        android:id="@+id/viewPlantActivityBackButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPlantActivityEditButton" />

</androidx.constraintlayout.widget.ConstraintLayout>