<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewAreaActivity">

    <TextView
        android:id="@+id/viewAreaActivityNameLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/label_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewAreaActivityNameTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityNameLabel" />

    <TextView
        android:id="@+id/viewAreaActivityLightLevelLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_LightLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityNameTextView" />

    <TextView
        android:id="@+id/viewAreaActivityLightLevelTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityLightLevelLabel" />

    <TextView
        android:id="@+id/viewAreaActivityNumberOfPlantsLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_NumberOfPlants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityLightLevelTextView" />

    <TextView
        android:id="@+id/viewAreaActivityNumberOfPlantsTextView"
        style="@style/large_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityNumberOfPlantsLabel" />

    <!--TODO: (Optional) Add a button that launches an Add Plants to Area activity -->

    <Button
        android:id="@+id/viewAreaActivityEditButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        android:text="@string/buttonTitle_Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityNumberOfPlantsTextView" />

    <Button
        android:id="@+id/viewAreaActivityBackButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAreaActivityEditButton" />

</androidx.constraintlayout.widget.ConstraintLayout>