<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAreaActivity">

    <TextView
        android:id="@+id/editAreaActivityNameLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/label_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAreaActivityNameEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:hint="@string/hint_EnterAreaName"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivityNameLabel" />

    <TextView
        android:id="@+id/editAreaActivityLightLevelLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_LightLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivityNameEditText" />

    <RadioGroup
        android:id="@+id/editAreaActivityLightLevelRadioGroup"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivityLightLevelLabel">

        <RadioButton
            android:id="@+id/veryLowRadioButton"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/lowRadioButton"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/mediumRadioButton"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/highRadioButton"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/veryHighRadioButton"
            style="@style/light_level_radio_style" />

    </RadioGroup>

    <Button
        android:id="@+id/editAreaActivitySaveButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        android:text="@string/buttonTitle_Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivityLightLevelRadioGroup" />

    <Button
        android:id="@+id/editAreaActivityCancelButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivitySaveButton" />

    <Button
        android:id="@+id/editAreaActivityDeleteButton"
        style="@style/danger_button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAreaActivityCancelButton" />


</androidx.constraintlayout.widget.ConstraintLayout>