<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPlantActivity">

    <TextView
        android:id="@+id/editPlantActivityNameLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/label_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPlantActivityNameEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:hint="@string/hint_EnterPlantName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityNameLabel"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/editPlantActivityPlantTypeLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_PlantType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityNameEditText" />

    <EditText
        android:id="@+id/editPlantActivityPlantTypeEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:hint="@string/hint_EnterPlantType"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityPlantTypeLabel"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/editPlantActivityLightLevelNeededLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_LightLevelNeeded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityPlantTypeEditText" />

    <RadioGroup
        android:id="@+id/editPlantActivityLightLevelNeededRadioGroup"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityLightLevelNeededLabel">

        <RadioButton
            android:id="@+id/veryLowRadioButton"
            android:tag="VERY_LOW"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/lowRadioButton"
            android:tag="LOW"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/mediumRadioButton"
            android:tag="MEDIUM"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/highRadioButton"
            android:tag="HIGH"
            style="@style/light_level_radio_style" />

        <RadioButton
            android:id="@+id/veryHighRadioButton"
            android:tag="VERY_HIGH"
            style="@style/light_level_radio_style" />

    </RadioGroup>

    <!--TODO: This will need to be a dropdown to select from the user's areas
    <TextView
        android:id="@+id/editPlantActivityAreaLabel"
        style="@style/small_text_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:text="@string/label_Area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityLightLevelNeededRadioGroup" />

    <EditText
        android:id="@+id/editPlantActivityAreaEditText"
        style="@style/text_field_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:hint="@string/hint_SelectArea"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityAreaLabel"
        tools:ignore="Autofill" />
     -->

    <Button
        android:id="@+id/editPlantActivitySaveButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        android:text="@string/buttonTitle_Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityLightLevelNeededRadioGroup" />

    <Button
        android:id="@+id/editPlantActivityCancelButton"
        style="@style/button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivitySaveButton" />

    <Button
        android:id="@+id/editPlantActivityDeleteButton"
        style="@style/danger_button_style"
        android:layout_width="@dimen/standard_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/buttonTitle_Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlantActivityCancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>